Fix collapse search bar colors

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8512,7 +8512,8 @@ body {
   #mainNav.is-fixed {
     /* when the user scrolls down, we hide the header right above the viewport */
     position: fixed;
-    top: -77px;
+    top: -67px;
+    /*top: -77px;*/
     -webkit-transition: -webkit-transform 0.2s;
     transition: -webkit-transform 0.2s;
     transition: transform 0.2s;
@@ -8900,4 +8901,8 @@ fieldset[disabled] .btn-primary:hover {
   }
   .search-button:hover {
     color: white;
+  }
+
+  .is-visible .search-button {
+  background-color: #333;
   }
